--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <a href="recipes/lasagna.html">Lasagna recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+        <li><a href="recipes/macncheese.html">Mac and Cheese recipe</a></li>
+    </ul>
 </body>
 </html>
